# lendstack-core

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  index.html  pyproject.toml
.githooks/: pre-commit
databricks/: README.md  idpflow_extract_job.py  lendstack_extract_job.py
docs/: DEPLOY.md  INTEGRATIONS.md  article.md
examples/: README.md  claude_desktop_config.json  crewai_crew.py  direct_library.py  langgraph_agent.py  mcp_stdio_client.py
src/idpflow_core/: __init__.py  ade_client.py  auth.py  models.py  package.py  render.py  server.py
src/lendstack_core/: __init__.py  classify.py  models.py  schemas.py  server.py  stacking.py
