[project]
name = "idpflow-core"
version = "0.1.0"
description = "MCP server for agentic document extraction + stacking over LandingAI ADE: ingest, classify, stack, and extract typed fields with page-level provenance. Bring your own LandingAI key."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["mcp", "landingai", "ade", "document-extraction", "claude", "agents"]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    # LandingAI ADE client (bring your own VISION_AGENT_API_KEY).
    "landingai-ade>=0.1.0",
    # Package rendering: cover sheet (fpdf2) + source-doc merge (pypdf).
    "fpdf2>=2.7",
    "pypdf>=4.0",
    # OAuth 2.1 resource-server JWT verification (remote transport).
    "PyJWT[crypto]>=2.8",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/rdmurugan/idpflow-core"
Issues = "https://github.com/rdmurugan/idpflow-core/issues"

[project.scripts]
idpflow-core = "idpflow_core.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idpflow_core"]
